ipad spacing issues

--- a/_sass/4-pages/_nav.sass
+++ b/_sass/4-pages/_nav.sass
@@ -80,4 +80,4 @@
       padding: 0
 
   .home
-    margin-top: 20px
+    margin-top: 30px
